--- a/app.html
+++ b/app.html
@@ -20,6 +20,8 @@
 
 </head>
 <body>
+
+<!-- HOME -->
 <div data-role="page" data-control-title="Home" id="page1">
     <div data-theme="a" data-role="header">
         <h1>
@@ -66,6 +68,9 @@
         </div>
     </div>
 </div>
+<!-- /HOME -->
+
+<!-- ALERTS -->
 <div data-role="page" data-control-title="Alerts List" id="page2">
     <div data-theme="a" data-role="header" data-position="fixed">
         <h1 class="ui-title">
@@ -118,6 +123,9 @@
         </ul>
     </div>
 </div>
+<!-- /ALERTS -->
+
+<!-- INSIDE ALERT -->
 <div data-role="page" data-control-title="Inside Alert" id="page4">
     <div data-theme="a" data-role="header" data-position="fixed">
         <a href="#page2" data-icon="arrow-l" data-iconpos="left" class="ui-btn ui-btn-left ui-icon-arrow-l ui-btn-icon-left">
@@ -152,6 +160,9 @@
         </div>
     </div>
 </div>
+<!-- INSIDE ALERT -->
+
+<!-- CREATE PROFILE -->
 <div data-role="page" data-control-title="Create Profile" id="page5">
     <div data-theme="a" data-role="header">
         <h1 class="ui-title">
@@ -223,6 +234,9 @@
         <input type="submit" value="Register">
     </div>
 </div>
+<!-- /CREATE PROFILE -->
+
+<!-- EDIT PROFILE -->
 <div data-role="page" data-control-title="Edit Profile" id="page6">
     <div data-theme="a" data-role="header">
         <h1 class="ui-title">
@@ -283,8 +297,14 @@
         </div>
     </div>
 </div>
+<!-- /EDIT PROFILE -->
+
+<!-- PRODUCTS -->
 <div data-role="page" data-control-title="Products" id="page7">
     <div data-theme="a" data-role="header">
+        <a href="#page1" data-icon="arrow-l" data-iconpos="left" class="ui-btn ui-btn-left ui-icon-arrow-l ui-btn-icon-left">
+            Back
+        </a>
         <h1 class="ui-title">
             Products
         </h1>
@@ -365,6 +385,9 @@
         </div>
     </div>
 </div>
+<!-- /PRODUCTS -->
+
+<!-- COMPARE PRODUCTS -->
 <div data-role="page" data-control-title="Compare Products" id="page8">
     <div data-theme="a" data-role="header">
         <h1 class="ui-title">
@@ -674,6 +697,9 @@
         </div>
     </div>
 </div>
+<!-- /COMPARE PRODUCTS -->
+
+<!-- PRODUCTS DETAIL -->
 <div data-role="page" data-control-title="Products Detail" id="page9">
     <div data-theme="a" data-role="header">
         <h1 class="ui-title">
@@ -723,6 +749,9 @@
         </div>
     </div>
 </div>
+<!-- /PRODUCTS DETAIL -->
+
+<!-- STORES -->
 <div data-role="page" data-control-title="Stores" id="page10">
     <div data-theme="a" data-role="header">
         <h1 class="ui-title">
@@ -781,5 +810,8 @@
         </script>
     </div>
 </div>
+<!-- /STORES -->
+
+
 </body>
 </html>
